Fix z-index for images/videos inside non-piecemeal Header-media, so that the scrims are visible.

--- a/src/app/components/Block/media.scss
+++ b/src/app/components/Block/media.scss
@@ -145,8 +145,11 @@
     }
   }
 
-  video {
-    z-index: -1;
+  .is-not-piecemeal & {
+    img,
+    video {
+      z-index: -1;
+    }
   }
 
   .background-transition {
